added Q7, working on Q1 sim

--- a/probability-distributions.ipynb
+++ b/probability-distributions.ipynb
@@ -55,7 +55,21 @@
     "\n",
     "6 You want to get lunch at La Panaderia, but notice that the line is usually very long at lunchtime. After several weeks of careful observation, you notice that the average number of people in line when your lunch break starts is normally distributed with a mean of 15 and standard deviation of 3. If it takes 2 minutes for each person to order, and 10 minutes from ordering to getting your food, what is the likelihood that you have at least 15 minutes left to eat your food before you have to go back to class? Assume you have one hour for lunch, and ignore travel time to and from La Panaderia.\n",
     "\n",
-    "While time is the most common interval used, the poisson distribution can also be used for intervals like distance, area, or volume. ↩"
+    "While time is the most common interval used, the poisson distribution can also be used for intervals like distance, area, or volume. ↩\n",
+    "\n",
+    "7 Connect to the employees database and find the average salary of current employees, along with the standard deviation. Model the distribution of employees salaries with a normal distribution and answer the following questions:\n",
+    "\n",
+    "    a What percent of employees earn less than 60,000?\n",
+    "    b What percent of employees earn more than 95,000?\n",
+    "    c What percent of employees earn between 65,000 and 80,000?\n",
+    "    d What do the top 5% of employees make?\n",
+    "    \n",
+    "NOTE - to connect to DB - from pandas_sql_test.py doc:\n",
+    "import pandas as pd\n",
+    "from env import host, user, password\n",
+    "url = f'mysql+pymysql://{user}:{password}@{host}/employees'\n",
+    "df = pd.read_sql('SELECT * FROM employees LIMIT 5 OFFSET 50', url)\n",
+    "print(df)"
    ]
   },
   {
@@ -131,22 +145,44 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# What is the probability that no cars drive up in the noon hour?\n",
+    "stats.poisson(2).pmf(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# What is the probability that 3 or more cars come through the drive through?\n",
+    "  # remember SF is not inclusive\n",
+    "stats.poisson(2).sf(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# How likely is it that the drive through gets at least 1 car?\n",
+    "stats.poisson(2).pmf(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "unexpected indent (<ipython-input-25-d3e646e4b817>, line 5)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-25-d3e646e4b817>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    np.quantile for simulation\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 2 - Grades of State University graduates are normally distributed \n",
     "# with a mean of 3.0 and a standard deviation of .3. Calculate the following:\n",
@@ -156,9 +192,10 @@
     "# If I have a GPA of 3.5, what percentile am I in?\n",
     "#   can determine w/ np.percentile or .quantile\n",
     "\n",
-    "mu = 3.0\n",
-    "sigma = .3\n",
-    "grades = np.random.normal(mu, sigma, 1000)\n",
+    "# mu = 3.0\n",
+    "# sigma = .3\n",
+    "# grades = np.random.normal(mu, sigma, 1000)\n",
+    "\n",
     "\n",
     "   \n",
     "    \n",
@@ -742,17 +779,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# mis en place\n",
-    "mean = 15\n",
-    "std_dev = 3\n",
-    "lunch = 60\n",
-    "my_compl_order = 12  # aka 2 per person + 10 fm order to reciept\n",
-    "time_2eat = 15\n",
-    "total_excluded_time = 15 + 12\n",
+    "# mis en place for Q6 \n",
+    "# mean = 15\n",
+    "# std_dev = 3\n",
+    "# lunch = 60\n",
+    "# my_compl_order = 12  # aka 2 per person + 10 fm order to reciept\n",
+    "# time_2eat = 15\n",
+    "# total_excluded_time = 15 + 12\n",
     "\n",
     "# with a mean of 15 and 2 min per person = 30 min\n",
     "# sd = 2 * sd of 3 = 6\n",
     "# time_left = 60 min - \"time to order\" - \"time to recieve order\" = 33 min\n",
+    "\n",
     "\n"
    ]
   },
