--- a/hypothesis_testing.ipynb
+++ b/hypothesis_testing.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "exercise 1\n",
+    "exercise 1 -------------------------\n",
     "Ace Realty wants to determine whether the average time it takes to sell homes\n",
     "is different for its two offices. A sample of 40 sales from office #1 revealed\n",
     "a mean of 90 days and a standard deviation of 15 days. A sample of 50 sales \n",
@@ -32,13 +32,430 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "%matplotlib inline\n",
+    "import matplotlib.pyplot as plt\n",
     "from pydataset import data\n",
-    "mpg = data('mpg')"
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import seaborn as sns\n",
+    "from scipy import stats\n",
+    "\n",
+    "mpg = data('mpg')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Exercise 2 ----------------------------\n",
+    "Load the mpg dataset and use it to answer the following questions:\n",
+    "\n",
+    "Is there a difference in fuel-efficiency in cars from 2008 vs 1999?\n",
+    "Are compact cars more fuel-efficient than the average car?\n",
+    "Do manual cars get better gas mileage than automatic cars?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>manufacturer</th>\n",
+       "      <th>model</th>\n",
+       "      <th>displ</th>\n",
+       "      <th>year</th>\n",
+       "      <th>cyl</th>\n",
+       "      <th>trans</th>\n",
+       "      <th>drv</th>\n",
+       "      <th>cty</th>\n",
+       "      <th>hwy</th>\n",
+       "      <th>fl</th>\n",
+       "      <th>class</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>audi</td>\n",
+       "      <td>a4</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>1999</td>\n",
+       "      <td>4</td>\n",
+       "      <td>auto(l5)</td>\n",
+       "      <td>f</td>\n",
+       "      <td>18</td>\n",
+       "      <td>29</td>\n",
+       "      <td>p</td>\n",
+       "      <td>compact</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>audi</td>\n",
+       "      <td>a4</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>1999</td>\n",
+       "      <td>4</td>\n",
+       "      <td>manual(m5)</td>\n",
+       "      <td>f</td>\n",
+       "      <td>21</td>\n",
+       "      <td>29</td>\n",
+       "      <td>p</td>\n",
+       "      <td>compact</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>audi</td>\n",
+       "      <td>a4</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>4</td>\n",
+       "      <td>manual(m6)</td>\n",
+       "      <td>f</td>\n",
+       "      <td>20</td>\n",
+       "      <td>31</td>\n",
+       "      <td>p</td>\n",
+       "      <td>compact</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>audi</td>\n",
+       "      <td>a4</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>4</td>\n",
+       "      <td>auto(av)</td>\n",
+       "      <td>f</td>\n",
+       "      <td>21</td>\n",
+       "      <td>30</td>\n",
+       "      <td>p</td>\n",
+       "      <td>compact</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>audi</td>\n",
+       "      <td>a4</td>\n",
+       "      <td>2.8</td>\n",
+       "      <td>1999</td>\n",
+       "      <td>6</td>\n",
+       "      <td>auto(l5)</td>\n",
+       "      <td>f</td>\n",
+       "      <td>16</td>\n",
+       "      <td>26</td>\n",
+       "      <td>p</td>\n",
+       "      <td>compact</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  manufacturer model  displ  year  cyl       trans drv  cty  hwy fl    class\n",
+       "1         audi    a4    1.8  1999    4    auto(l5)   f   18   29  p  compact\n",
+       "2         audi    a4    1.8  1999    4  manual(m5)   f   21   29  p  compact\n",
+       "3         audi    a4    2.0  2008    4  manual(m6)   f   20   31  p  compact\n",
+       "4         audi    a4    2.0  2008    4    auto(av)   f   21   30  p  compact\n",
+       "5         audi    a4    2.8  1999    6    auto(l5)   f   16   26  p  compact"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mpg.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.frame.DataFrame"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(mpg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>displ</th>\n",
+       "      <th>year</th>\n",
+       "      <th>cyl</th>\n",
+       "      <th>cty</th>\n",
+       "      <th>hwy</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>234.000000</td>\n",
+       "      <td>234.000000</td>\n",
+       "      <td>234.000000</td>\n",
+       "      <td>234.000000</td>\n",
+       "      <td>234.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>3.471795</td>\n",
+       "      <td>2003.500000</td>\n",
+       "      <td>5.888889</td>\n",
+       "      <td>16.858974</td>\n",
+       "      <td>23.440171</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>1.291959</td>\n",
+       "      <td>4.509646</td>\n",
+       "      <td>1.611534</td>\n",
+       "      <td>4.255946</td>\n",
+       "      <td>5.954643</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1.600000</td>\n",
+       "      <td>1999.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>9.000000</td>\n",
+       "      <td>12.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>2.400000</td>\n",
+       "      <td>1999.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>14.000000</td>\n",
+       "      <td>18.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>3.300000</td>\n",
+       "      <td>2003.500000</td>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>17.000000</td>\n",
+       "      <td>24.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>4.600000</td>\n",
+       "      <td>2008.000000</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>19.000000</td>\n",
+       "      <td>27.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>2008.000000</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>35.000000</td>\n",
+       "      <td>44.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            displ         year         cyl         cty         hwy\n",
+       "count  234.000000   234.000000  234.000000  234.000000  234.000000\n",
+       "mean     3.471795  2003.500000    5.888889   16.858974   23.440171\n",
+       "std      1.291959     4.509646    1.611534    4.255946    5.954643\n",
+       "min      1.600000  1999.000000    4.000000    9.000000   12.000000\n",
+       "25%      2.400000  1999.000000    4.000000   14.000000   18.000000\n",
+       "50%      3.300000  2003.500000    6.000000   17.000000   24.000000\n",
+       "75%      4.600000  2008.000000    8.000000   19.000000   27.000000\n",
+       "max      7.000000  2008.000000    8.000000   35.000000   44.000000"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mpg.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "manufacturer     object\n",
+       "model            object\n",
+       "displ           float64\n",
+       "year              int64\n",
+       "cyl               int64\n",
+       "trans            object\n",
+       "drv              object\n",
+       "cty               int64\n",
+       "hwy               int64\n",
+       "fl               object\n",
+       "class            object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mpg.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>manufacturer</th>\n",
+       "      <th>model</th>\n",
+       "      <th>year</th>\n",
+       "      <th>hwy</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>audi</td>\n",
+       "      <td>a4</td>\n",
+       "      <td>1999</td>\n",
+       "      <td>29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>audi</td>\n",
+       "      <td>a4</td>\n",
+       "      <td>1999</td>\n",
+       "      <td>29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>audi</td>\n",
+       "      <td>a4</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>audi</td>\n",
+       "      <td>a4</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>audi</td>\n",
+       "      <td>a4</td>\n",
+       "      <td>1999</td>\n",
+       "      <td>26</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  manufacturer model  year  hwy\n",
+       "1         audi    a4  1999   29\n",
+       "2         audi    a4  1999   29\n",
+       "3         audi    a4  2008   31\n",
+       "4         audi    a4  2008   30\n",
+       "5         audi    a4  1999   26"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# only need manufacturer, model, year, and hwy\n",
+    "columns = ['manufacturer', 'model', 'year', 'hwy']\n",
+    "mpg[columns].head()\n"
    ]
   },
   {
@@ -52,21 +469,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Load the mpg dataset and use it to answer the following questions:\n",
-    "\n",
-    "Is there a difference in fuel-efficiency in cars from 2008 vs 1999?\n",
-    "Are compact cars more fuel-efficient than the average car?\n",
-    "Do manual cars get better gas mileage than automatic cars?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "NOTE to self for connecting to DB\n",
     "    import pandas as pd\n",
     "    from env import host, user, password\n",
     "    url = f'mysql+pymysql://{user}:{password}@{host}/employees' df = pd.read_sql('SELECT * FROM employees LIMIT 5 OFFSET 50', url) print(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import env\n",
+    "\n",
+    "url = f'mysql"
    ]
   }
  ],
