getting DF setup but having problems with T score

--- a/hypothesis_testing.ipynb
+++ b/hypothesis_testing.ipynb
@@ -32,6 +32,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
    "outputs": [],
@@ -63,7 +77,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -460,10 +476,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "mpg_2008 = mpg[columns].year == 2008\n",
+    "# mpg[mpg_2008]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "23.45299145299145"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fuel_efficienchy_2008 = mpg[mpg_2008].hwy.mean()\n",
+    "# fuel_efficienchy_2008"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mpg_1999 = mpg[columns].year == 1999\n",
+    "# mpg[mpg_1999]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "23.427350427350426"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fuel_efficienchy_1999 = mpg[mpg_1999].hwy.mean()\n",
+    "fuel_efficienchy_1999"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2008 fuel efficiency is -  23.45299145299145\n",
+      "1999 fuel efficiency is -  23.427350427350426\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Is there a difference in fuel-efficiency in cars from 2008 vs 1999?\n",
+    "print(\"2008 fuel efficiency is - \", fuel_efficienchy_2008)\n",
+    "print(\"1999 fuel efficiency is - \", fuel_efficienchy_1999)"
+   ]
   },
   {
    "cell_type": "markdown",
