got some help, added Q1 setup and answer

--- a/hypothesis_testing.ipynb
+++ b/hypothesis_testing.ipynb
@@ -32,10 +32,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%matplotlib inline\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from scipy import stats\n",
+    "from math import sqrt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# example fm curriculum\n",
+    "xbar1 = 90 # x1.mean()\n",
+    "xbar2 = 100 # x2.mean()\n",
+    "\n",
+    "n1 = 40 # x1.shape[0]\n",
+    "n2 = 50 # x2.shape[0]\n",
+    "\n",
+    "s1 = 15 # x1.std()\n",
+    "s2 = 20 # x2.std()\n",
+    "\n",
+    "degf = n1 + n2 - 2\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "17.956702977389302"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s_p = sqrt(((n1 - 1) * s1**2 + (n2 - 1) * s2**2) / (n1 + n2 - 2))\n",
+    "s_p"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-2.6252287036468456"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "standard_error = se = sqrt(s1**2 / n1 + s2**2 / n2)\n",
+    "\n",
+    "t = (xbar1 - xbar2) / (s_p * sqrt(1/n1 + 1/n2))\n",
+    "t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "t = -2.62523\n",
+      "p = 1.98979\n"
+     ]
+    }
+   ],
+   "source": [
+    "# p test\n",
+    "p = stats.t(degf).sf(t) * 2\n",
+    "\n",
+    "print(f't = {t:.5f}')\n",
+    "print(f'p = {p:.5f}')"
+   ]
   },
   {
    "cell_type": "code",
@@ -507,6 +604,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fuel_efficienchy_2008 = mpg[mpg_2008].hwy.unique().mean()\n",
+    "#fuel_efficienchy_2008"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 28,
    "metadata": {},
    "outputs": [],
@@ -517,36 +624,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "23.427350427350426"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "fuel_efficienchy_1999 = mpg[mpg_1999].hwy.mean()\n",
-    "fuel_efficienchy_1999"
+    "# fuel_efficienchy_1999 = mpg[mpg_1999].hwy.mean()\n",
+    "# fuel_efficienchy_1999"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fuel_efficienchy_1999 = mpg[mpg_1999].hwy.unique().mean()\n",
+    "#fuel_efficienchy_1999"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2008 fuel efficiency is -  23.45299145299145\n",
-      "1999 fuel efficiency is -  23.427350427350426\n"
+      "2008 fuel efficiency is -  24.782608695652176\n",
+      "1999 fuel efficiency is -  26.263157894736842\n"
      ]
     }
    ],
