still on Q1 Q2 - answered Q3

--- a/hypothesis_testing.ipynb
+++ b/hypothesis_testing.ipynb
@@ -1423,7 +1423,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "  # CLASS EXAMPLE\n",
+    "  # CLASS EXAMPLE using mpg\n",
     "x = mpg.hwy\n",
     "y = mpg.cty\n",
     "\n",
@@ -2087,6 +2087,159 @@
     "3 Use the sleepstudy data. \n",
     "- Is there a relationship between days and reaction time?"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sleep_study = data('sleepstudy')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Reaction    float64\n",
+       "Days          int64\n",
+       "Subject       int64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sleep_study.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pre-set values\n",
+    "n = sleep_study.shape[0]     # number of observations\n",
+    "degf = n - 2        # degrees of freedom: the \n",
+    "                    # of values in the final calculation of a statistic that are free to vary.\n",
+    "conf_interval = .95 # desired confidence interval\n",
+    "α = 1 - conf_interval"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5352302262650251"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calculate Pearson Correlation Coefficient\n",
+    "x = sleep_study.Days\n",
+    "y = sleep_study.Reaction\n",
+    "\n",
+    "def stdev(x):\n",
+    "    variance = ((x - x.mean()) ** 2).sum() / n\n",
+    "    return sqrt(variance)\n",
+    "\n",
+    "r_xy = (((x - x.mean()) * (y - y.mean())).sum() / n) / (stdev(x) * stdev(y))\n",
+    "r_xy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate the corresponding p-value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8.453663146744406"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t = (r_xy * sqrt(n - 2)) / sqrt(1 - r_xy**2)\n",
+    "t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9.894096322214921e-15"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p = stats.t.sf(t, df=degf) * 2 # *2 for a two-tailed test\n",
+    "p"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p < α  # alpha is in the pre-set values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
